--- a/CSS/Layouts/Flexbox.html
+++ b/CSS/Layouts/Flexbox.html
@@ -37,7 +37,7 @@
         <div>2</div>
         <div>3</div>
         <div style="flex-grow: 4;">4</div>
-        <div style="align-self: ;">5</div>
+        <div>5</div>
         <div>6</div>
     </section>
     
