--- a/CSS/Layouts/Card.html
+++ b/CSS/Layouts/Card.html
@@ -62,6 +62,7 @@
             grid-row: 3/4;
             padding: 16px 10px;
             font-size: large;
+            text-align: justify;
         }
 
         .card>button {
@@ -91,9 +92,7 @@
     <div class="background-container">
         <div class="card">
             <img src="https://placehold.co/400x200" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, eum. adipisicing elit. Accusamus,
-                eum.adipisicing elit. Accusamus, eum.adipisicing elit. Accusamus, eum.adipisicing elit. Accusamus, eum.
-            </p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem inventore eum reprehenderit, dolor earum nisi! Sint, quisquam sit quia aspernatur eius nisi necessitatibus maxime vitae, quidem asperiores nulla commodi</p>
             <button>Proceed</button>
         </div>
     </div>
