--- a/TailwindCSS/src/output.css
+++ b/TailwindCSS/src/output.css
@@ -588,6 +588,14 @@ video {
   }
 }
 
+.static {
+  position: static;
+}
+
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -600,52 +608,152 @@ video {
   position: sticky;
 }
 
+.top-10 {
+  top: 2.5rem;
+}
+
+.top-3 {
+  top: 0.75rem;
+}
+
 .top-1 {
   top: 0.25rem;
 }
 
-.left-0 {
-  left: 0px;
+.top-12 {
+  top: 3rem;
 }
 
-.left-3 {
-  left: 0.75rem;
+.top-11 {
+  top: 2.75rem;
 }
 
-.right-3 {
-  right: 0.75rem;
+.top-24 {
+  top: 6rem;
 }
 
-.top-0 {
-  top: 0px;
+.top-4 {
+  top: 1rem;
 }
 
-.top-2 {
-  top: 0.5rem;
+.top-8 {
+  top: 2rem;
+}
+
+.top-6 {
+  top: 1.5rem;
 }
 
 .bottom-0 {
   bottom: 0px;
 }
 
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
+.-bottom-5 {
+  bottom: -1.25rem;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.top-full {
+  top: 100%;
+}
+
+.right-full {
+  right: 100%;
+}
+
+.right-2 {
+  right: 0.5rem;
+}
+
+.right-1 {
+  right: 0.25rem;
+}
+
+.right-3 {
+  right: 0.75rem;
+}
+
+.left-\[500px\] {
+  left: 500px;
+}
+
+.left-\[400px\] {
+  left: 400px;
+}
+
+.right-5 {
+  right: 1.25rem;
+}
+
+.left-\[800px\] {
+  left: 800px;
+}
+
+.right-\[100px\] {
+  right: 100px;
+}
+
+.left-\[950px\] {
+  left: 950px;
+}
+
+.left-\[1000px\] {
+  left: 1000px;
+}
+
+.left-\[1050px\] {
+  left: 1050px;
+}
+
+.left-\[1100px\] {
+  left: 1100px;
+}
+
+.left-1 {
+  left: 0.25rem;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
 .z-10 {
   z-index: 10;
-}
-
-.col-span-2 {
-  grid-column: span 2 / span 2;
-}
-
-.col-start-2 {
-  grid-column-start: 2;
 }
 
 .col-start-1 {
   grid-column-start: 1;
 }
 
+.col-start-2 {
+  grid-column-start: 2;
+}
+
 .col-start-3 {
   grid-column-start: 3;
+}
+
+.col-start-4 {
+  grid-column-start: 4;
 }
 
 .m-11 {
@@ -656,24 +764,36 @@ video {
   margin: 0.5rem;
 }
 
-.m-4 {
-  margin: 1rem;
-}
-
 .m-3 {
   margin: 0.75rem;
+}
+
+.m-4 {
+  margin: 1rem;
 }
 
 .mb-1 {
   margin-bottom: 0.25rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
 
+.mr-3 {
+  margin-right: 0.75rem;
+}
+
 .mt-1 {
   margin-top: 0.25rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .mt-3 {
@@ -684,28 +804,24 @@ video {
   margin-top: 1.25rem;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
-.mr-5 {
-  margin-right: 1.25rem;
-}
-
 .mr-2 {
   margin-right: 0.5rem;
 }
 
-.mr-3 {
-  margin-right: 0.75rem;
+.mt-7 {
+  margin-top: 1.75rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .box-content {
   box-sizing: content-box;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -736,6 +852,18 @@ video {
   height: 20rem;
 }
 
+.h-\[1500px\] {
+  height: 1500px;
+}
+
+.h-\[400px\] {
+  height: 400px;
+}
+
+.h-\[600px\] {
+  height: 600px;
+}
+
 .h-max {
   height: -moz-max-content;
   height: max-content;
@@ -750,64 +878,57 @@ video {
   height: 100vh;
 }
 
-.h-24 {
-  height: 6rem;
+.h-7 {
+  height: 1.75rem;
 }
 
-.h-1\/3 {
-  height: 33.333333%;
+.h-\[\] {
+  height: ;
 }
 
-.h-28 {
-  height: 7rem;
+.h-\[40\] {
+  height: 40;
 }
 
-.h-3 {
-  height: 0.75rem;
+.h-\[40px\] {
+  height: 40px;
 }
 
-.h-36 {
-  height: 9rem;
-}
-
-.h-32 {
-  height: 8rem;
-}
-
-.h-40 {
-  height: 10rem;
-}
-
-.h-\[400px\] {
-  height: 400px;
-}
-
-.h-10 {
-  height: 2.5rem;
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 .h-dvh {
   height: 100dvh;
 }
 
-.h-\[1000px\] {
-  height: 1000px;
+.h-\[px\] {
+  height: px;
 }
 
-.h-\[1500px\] {
-  height: 1500px;
+.h-\[700px\] {
+  height: 700px;
 }
 
-.h-\[800px\] {
-  height: 800px;
+.h-1\/5 {
+  height: 20%;
 }
 
-.h-\[screen\] {
-  height: screen;
+.h-1\/3 {
+  height: 33.333333%;
 }
 
-.h-\[600px\] {
-  height: 600px;
+.h-\[300px\] {
+  height: 300px;
+}
+
+.h-\[250px\] {
+  height: 250px;
+}
+
+.h-\[450px\] {
+  height: 450px;
 }
 
 .min-h-32 {
@@ -826,6 +947,10 @@ video {
   width: 6rem;
 }
 
+.w-36 {
+  width: 9rem;
+}
+
 .w-4 {
   width: 1rem;
 }
@@ -836,6 +961,18 @@ video {
 
 .w-96 {
   width: 24rem;
+}
+
+.w-\[140px\] {
+  width: 140px;
+}
+
+.w-\[2000px\] {
+  width: 2000px;
+}
+
+.w-\[250px\] {
+  width: 250px;
 }
 
 .w-dvw {
@@ -865,52 +1002,56 @@ video {
   width: 100vw;
 }
 
-.w-2 {
-  width: 0.5rem;
+.w-\[\] {
+  width: ;
 }
 
-.w-20 {
-  width: 5rem;
+.w-\[700px\] {
+  width: 700px;
 }
 
-.w-3 {
-  width: 0.75rem;
+.w-\[400px\] {
+  width: 400px;
 }
 
-.w-36 {
-  width: 9rem;
+.w-\[4px\] {
+  width: 4px;
 }
 
-.w-28 {
-  width: 7rem;
+.w-\[200px\] {
+  width: 200px;
 }
 
-.w-32 {
-  width: 8rem;
-}
-
-.w-1 {
-  width: 0.25rem;
+.w-\[full\] {
+  width: full;
 }
 
 .w-1\/3 {
   width: 33.333333%;
 }
 
-.w-48 {
-  width: 12rem;
+.w-1\/4 {
+  width: 25%;
 }
 
-.w-\[250px\] {
-  width: 250px;
+.w-1\/5 {
+  width: 20%;
 }
 
-.w-\[2px\] {
-  width: 2px;
+.w-1\/6 {
+  width: 16.666667%;
 }
 
-.w-\[260px\] {
-  width: 260px;
+.w-\[60px\] {
+  width: 60px;
+}
+
+.w-\[125px\] {
+  width: 125px;
+}
+
+.w-\[225px\] {
+  width: 225px;
 }
 
 .min-w-24 {
@@ -921,28 +1062,32 @@ video {
   max-width: 24rem;
 }
 
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+.grid-cols-\[260px\2c 260px\2c 260px\2c 260px\] {
+  grid-template-columns: 260px 260px 260px 260px;
 }
 
-.grid-cols-\[\] {
-  grid-template-columns: ;
+.grid-rows-\[\] {
+  grid-template-rows: ;
 }
 
-.grid-cols-\[rep\] {
-  grid-template-columns: rep;
+.grid-rows-\[7oopx\] {
+  grid-template-rows: 7oopx;
 }
 
-.grid-cols-\[repeat\(3\2c 500px\)\] {
-  grid-template-columns: repeat(3,500px);
+.grid-rows-\[700px\] {
+  grid-template-rows: 700px;
 }
 
-.grid-cols-\[500px\2c \] {
-  grid-template-columns: 500px ;
+.grid-rows-\[500px\] {
+  grid-template-rows: 500px;
 }
 
-.grid-cols-\[500px\2c 500px\2c 500px\] {
-  grid-template-columns: 500px 500px 500px;
+.grid-rows-\[600px\] {
+  grid-template-rows: 600px;
+}
+
+.grid-rows-\[650px\] {
+  grid-template-rows: 650px;
 }
 
 .items-center {
@@ -953,28 +1098,12 @@ video {
   justify-content: center;
 }
 
-.gap-1 {
-  gap: 0.25rem;
+.gap-2 {
+  gap: 0.5rem;
 }
 
-.gap-\[\] {
-  gap: ;
-}
-
-.gap-\[0\.5px\] {
-  gap: 0.5px;
-}
-
-.gap-\[2px\] {
-  gap: 2px;
-}
-
-.overflow-auto {
-  overflow: auto;
-}
-
-.overflow-y-hidden {
-  overflow-y: hidden;
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .rounded-lg {
@@ -1018,24 +1147,24 @@ video {
   border-color: rgb(226 232 240 / var(--tw-border-opacity, 1));
 }
 
-.border-slate-950 {
+.border-white {
   --tw-border-opacity: 1;
-  border-color: rgb(2 6 23 / var(--tw-border-opacity, 1));
-}
-
-.border-fuchsia-900 {
-  --tw-border-opacity: 1;
-  border-color: rgb(112 26 117 / var(--tw-border-opacity, 1));
-}
-
-.border-fuchsia-700 {
-  --tw-border-opacity: 1;
-  border-color: rgb(162 28 175 / var(--tw-border-opacity, 1));
+  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
 .bg-blue-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
+}
+
+.bg-emerald-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(5 150 105 / var(--tw-bg-opacity, 1));
+}
+
+.bg-fuchsia-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(112 26 117 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gray-600 {
@@ -1051,6 +1180,11 @@ video {
 .bg-gray-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity, 1));
+}
+
+.bg-rose-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(225 29 72 / var(--tw-bg-opacity, 1));
 }
 
 .bg-slate-200 {
@@ -1078,18 +1212,58 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-fuchsia-900 {
+.bg-green-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(112 26 117 / var(--tw-bg-opacity, 1));
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity, 1));
 }
 
-.bg-emerald-600 {
+.bg-amber-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(5 150 105 / var(--tw-bg-opacity, 1));
+  background-color: rgb(245 158 11 / var(--tw-bg-opacity, 1));
 }
 
-.bg-fuchsia-900\/50 {
-  background-color: rgb(112 26 117 / 0.5);
+.bg-amber-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 230 138 / var(--tw-bg-opacity, 1));
+}
+
+.bg-amber-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(217 119 6 / var(--tw-bg-opacity, 1));
+}
+
+.bg-amber-500\/50 {
+  background-color: rgb(245 158 11 / 0.5);
+}
+
+.bg-amber-500\/70 {
+  background-color: rgb(245 158 11 / 0.7);
+}
+
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity, 1));
+}
+
+.bg-purple-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 51 234 / var(--tw-bg-opacity, 1));
+}
+
+.bg-amber-500\/90 {
+  background-color: rgb(245 158 11 / 0.9);
+}
+
+.bg-amber-500\/40 {
+  background-color: rgb(245 158 11 / 0.4);
+}
+
+.p-1 {
+  padding: 0.25rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .p-5 {
@@ -1108,12 +1282,8 @@ video {
   padding: 1rem;
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-1 {
-  padding: 0.25rem;
+.p-3 {
+  padding: 0.75rem;
 }
 
 .px-1 {
@@ -1131,8 +1301,20 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.pr-3 {
+  padding-right: 0.75rem;
+}
+
 .pr-1 {
   padding-right: 0.25rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pl-3 {
+  padding-left: 0.75rem;
 }
 
 .text-center {
@@ -1153,12 +1335,27 @@ video {
   line-height: 1.75rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
 
 .font-semibold {
   font-weight: 600;
+}
+
+.text-blue-900 {
+  --tw-text-opacity: 1;
+  color: rgb(30 58 138 / var(--tw-text-opacity, 1));
+}
+
+.text-green-600 {
+  --tw-text-opacity: 1;
+  color: rgb(22 163 74 / var(--tw-text-opacity, 1));
 }
 
 .text-teal-500 {
@@ -1171,24 +1368,42 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-stone-100 {
+.text-slate-950 {
   --tw-text-opacity: 1;
-  color: rgb(245 245 244 / var(--tw-text-opacity, 1));
+  color: rgb(2 6 23 / var(--tw-text-opacity, 1));
 }
 
-.text-gray-900 {
+.text-pink-800 {
   --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity, 1));
+  color: rgb(157 23 77 / var(--tw-text-opacity, 1));
 }
 
-.text-blue-900 {
-  --tw-text-opacity: 1;
-  color: rgb(30 58 138 / var(--tw-text-opacity, 1));
+.decoration-green-500 {
+  text-decoration-color: #22c55e;
 }
 
-.text-zinc-900 {
-  --tw-text-opacity: 1;
-  color: rgb(24 24 27 / var(--tw-text-opacity, 1));
+.decoration-dashed {
+  text-decoration-style: dashed;
+}
+
+.opacity-10 {
+  opacity: 0.1;
+}
+
+.opacity-5 {
+  opacity: 0.05;
+}
+
+.opacity-80 {
+  opacity: 0.8;
+}
+
+.opacity-95 {
+  opacity: 0.95;
+}
+
+.opacity-40 {
+  opacity: 0.4;
 }
 
 .shadow-\[10px_10px_20px_5px_rgba\(203\2c 213\2c 225\2c 0\.5\)\] {
@@ -1209,12 +1424,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-sky-600 {
   --tw-shadow-color: #0284c7;
   --tw-shadow: var(--tw-shadow-colored);
@@ -1230,42 +1439,25 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.shadow-black {
-  --tw-shadow-color: #000;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
 .ring-blue-600 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(37 99 235 / var(--tw-ring-opacity, 1));
-}
-
-.hover\:bottom-2:hover {
-  bottom: 0.5rem;
-}
-
-.hover\:right-2:hover {
-  right: 0.5rem;
 }
 
 .hover\:-bottom-2:hover {
   bottom: -0.5rem;
 }
 
-.hover\:left-2:hover {
-  left: 0.5rem;
-}
-
-.hover\:top-0:hover {
-  top: 0px;
-}
-
-.hover\:top-2:hover {
-  top: 0.5rem;
-}
-
 .hover\:bottom-0:hover {
   bottom: 0px;
+}
+
+.hover\:left-0:hover {
+  left: 0px;
+}
+
+.hover\:right-0:hover {
+  right: 0px;
 }
 
 .hover\:bg-blue-700:hover {
