COnnected Frontend and BAckend
- axios
- theme toggle
- daisyUI custom themes
-cors handling in express

--- a/NodeJS/project/frontend/src/index.css
+++ b/NodeJS/project/frontend/src/index.css
@@ -1,5 +1,12 @@
-@import "tailwindcss";
-@plugin "daisyui";
-@import "tailwindcss-radix-colors/dist/red.css";
-@import "tailwindcss-radix-colors/dist/slate.css";
-@import "tailwindcss-radix-colors/dist/blue.css";
+  @import "tailwindcss";
+
+
+ @plugin "daisyui" {
+
+   themes: lofi --default, black --prefersdark;
+
+ }
+
+body * {
+ @apply transition-colors duration-400;
+}
